k3s-prod/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    type: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      type: database
  template:
    metadata:
      labels:
        app: mysql
        type: database
    spec:
      containers:
        - name: mysql
          image: mariadb
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts: 
            - name: mysql-vol
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
