k3s-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress-prod
  labels:
    app: wordpress
    type: frontend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure  # HTTPS
    traefik.ingress.kubernetes.io/router.tls: "true"  # Activar TLS
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd  # Redirigir HTTP a HTTPS
spec:
  rules:
  - host: www.touristmap.es  # Dominio para producción
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
  tls:
  - hosts:
    - www.touristmap.es
    secretName: tls-cert-secret  # El secreto con los certificados SSL
